# mergify-hacking

./: CHANGELOG.md  README.md  mergify-hacking.cabal
.github/: mergify.yml
.github/workflows/: test.yml
