cabal-version:      3.0
name:               mergify-hacking
version:            0.1.0.0
synopsis:           Testing Mergify.io configuration
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             brandon s allbery kf8nh
maintainer:         allbery.b@gmail.com
-- copyright:
category:           System
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable mergify-hacking
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base >=4.16 && < 5
    hs-source-dirs:   app
    default-language: Haskell2010
